--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
     <div class="game"></div>
+    <button class="btn" onclick="tic_tac_toe.restart()">Restart this game</button>
 
     <script src="tic-tac-toe.js"></script>
     <script>
